[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/gameplay/bar_left.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/gameplay/hit_error.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/gameplay/gameplay.gd" type="Script" id=3]
[ext_resource path="res://skins/test_skin/taiko-bar-right.png" type="Texture" id=4]
[ext_resource path="res://temporary/osu_rwxudnxmu5.png" type="Texture" id=5]
[ext_resource path="res://temporary/untitled.png" type="Texture" id=6]
[ext_resource path="res://themes/gameplay.tres" type="Theme" id=7]

[node name="Gameplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 3 )

[node name="Ref" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.878431 )
texture = ExtResource( 5 )

[node name="Ref2" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.878431 )
texture = ExtResource( 6 )

[node name="BarRight" type="TextureRect" parent="."]
anchor_right = 1.0
margin_top = 300.0
margin_bottom = 628.0
texture = ExtResource( 4 )
expand = true

[node name="BarLeft" parent="." instance=ExtResource( 1 )]

[node name="UI" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -37.0
margin_top = 8.0
margin_right = -11.0
margin_bottom = 140.0
grow_horizontal = 0

[node name="Score" type="Label" parent="UI"]
margin_right = 26.0
margin_bottom = 64.0
theme_type_variation = "UI"

[node name="Accuracy" type="HBoxContainer" parent="UI"]
margin_top = 68.0
margin_right = 26.0
margin_bottom = 132.0
theme_type_variation = "Accuracy"

[node name="Label" type="Label" parent="UI/Accuracy"]
margin_bottom = 64.0
size_flags_horizontal = 3
theme_type_variation = "UI"
align = 2

[node name="Percent" type="Label" parent="UI/Accuracy"]
margin_left = 1.0
margin_top = 34.0
margin_right = 26.0
margin_bottom = 64.0
size_flags_vertical = 8
theme_type_variation = "Percent"
text = "%"

[node name="HitError" parent="." instance=ExtResource( 2 )]

[node name="Debug" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -100.0
margin_right = -9.0
margin_bottom = -10.0
grow_vertical = 0

[node name="DebugText" type="Label" parent="Debug"]
margin_right = 1421.0
margin_bottom = 14.0
text = "Welcome to TaiClone!"

[node name="TempLoadChart" type="HBoxContainer" parent="Debug"]
margin_top = 18.0
margin_right = 1421.0
margin_bottom = 90.0
size_flags_vertical = 3
theme_type_variation = "TempLoadChart"

[node name="LineEdit" type="LineEdit" parent="Debug/TempLoadChart"]
margin_right = 370.0
margin_bottom = 72.0
rect_min_size = Vector2( 370, 0 )
placeholder_text = "Chart Location"

[node name="LoadButton" type="Button" parent="Debug/TempLoadChart"]
margin_left = 378.0
margin_right = 458.0
margin_bottom = 72.0
rect_min_size = Vector2( 80, 0 )
text = "Load"

[node name="PlayButton" type="Button" parent="Debug/TempLoadChart"]
margin_left = 466.0
margin_right = 538.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 0 )
text = "Play"

[node name="AutoToggle" type="CheckBox" parent="Debug/TempLoadChart"]
margin_left = 546.0
margin_right = 604.0
margin_bottom = 72.0
text = "Auto"

[node name="Text" type="VBoxContainer" parent="Debug/TempLoadChart"]
margin_left = 612.0
margin_right = 1234.0
margin_bottom = 72.0
size_flags_horizontal = 3

[node name="FPS" type="Label" parent="Debug/TempLoadChart/Text"]
margin_right = 622.0
margin_bottom = 34.0
size_flags_vertical = 3
align = 2
valign = 1

[node name="Version" type="Label" parent="Debug/TempLoadChart/Text"]
margin_top = 38.0
margin_right = 622.0
margin_bottom = 72.0
size_flags_vertical = 3
text = "v0.3 - The Big One(tm)"
align = 2
valign = 1

[node name="Buffer" type="Control" parent="Debug/TempLoadChart"]
margin_left = 1242.0
margin_right = 1242.0
margin_bottom = 72.0

[node name="SettingsButton" type="Button" parent="Debug/TempLoadChart"]
margin_left = 1250.0
margin_right = 1421.0
margin_bottom = 72.0
rect_min_size = Vector2( 171, 0 )
text = "Settings"

[connection signal="load_chart" from="." to="BarLeft" method="load_func"]
[connection signal="debug_text" from="BarLeft" to="." method="text_debug"]
[connection signal="marker_added" from="BarLeft" to="HitError" method="new_marker"]
[connection signal="score_added" from="BarLeft" to="." method="add_score"]
[connection signal="change_indicator" from="HitError" to="." method="change_indicator"]
[connection signal="pressed" from="Debug/TempLoadChart/LoadButton" to="." method="load_func"]
[connection signal="pressed" from="Debug/TempLoadChart/PlayButton" to="." method="play_chart"]
[connection signal="toggled" from="Debug/TempLoadChart/AutoToggle" to="." method="auto_toggled"]
[connection signal="pressed" from="Debug/TempLoadChart/SettingsButton" to="." method="toggle_settings"]
